add missing pdf links

--- a/5fragen/index.html
+++ b/5fragen/index.html
@@ -10,6 +10,7 @@ contributor:
 - "Daniel Beucke"
 - "Redaktion LIBREAS"
 title: "Fünf Fragen zur Nachhaltigkeit von Forschungsinfrastrukturen"
+pdf: "master.pdf"
 date: 2019-12-15
 comments: false
 sharing: true
