--- a/dldl/index.html
+++ b/dldl/index.html
@@ -8,6 +8,7 @@ year: "2019"
 contributor: 
 - "Redaktion LIBREAS"
 title: "Das liest die LIBREAS, Nummer #5 (Sommer/Herbst 2019)"
+pdf: "master.pdf"
 date: 2019-04-21
 comments: false
 sharing: true
