--- a/gey/index.html
+++ b/gey/index.html
@@ -12,6 +12,7 @@ contributor:
 - "Robert Strötgen"
 - "Christian Pietsch"
 title: "Workshop @ deRSE19: Libraries for Research Software & Engineers"
+pdf: "master.pdf"
 date: 2019-12-09
 comments: false
 sharing: true
