--- a/hannesschlaeger/index.html
+++ b/hannesschlaeger/index.html
@@ -9,6 +9,7 @@ contributor:
 - "Vanessa Hannesschläger"
 - "Redaktion LIBREAS"
 title: "Infrastrukturen, Kulturwandel und Nachhaltigkeit – eine Open Policy für das Austrian Centre for Digital Humanities der Österreichischen Akademie der Wissenschaften"
+pdf: "master.pdf"
 date: 2019-12-08
 comments: false
 sharing: true
