--- a/krause/index.html
+++ b/krause/index.html
@@ -9,6 +9,7 @@ contributor:
 - "Carmen Krause"
 title: "Was ist Informationswissenschaft und wenn ja, wie viele?"
 subtitle: " Ein Veranstaltungsbericht"
+pdf: "master.pdf"
 date: 2019-12-09
 comments: false
 sharing: true
