--- a/gelati/index.html
+++ b/gelati/index.html
@@ -11,6 +11,7 @@ orcid:
  - orcid: "0000-0002-6066-1308"
    name: "Francesco Gelati"
 title: "Die nachhaltige Bewahrung einer Forschungsdatenbank durch Linked Data. Laut welchem Vokabular?"
+pdf: "master.pdf"
 date: 2019-12-09
 abstract: "Linked Data bietet die Möglichkeit nicht nur normkonforme Datensätze zur
 Verfügung zu stellen sonder auch nachhaltig und langfristig Metadaten zu
