--- a/rajski/index.html
+++ b/rajski/index.html
@@ -11,6 +11,7 @@ contributor:
 title: "DSpace-Konsortium Deutschland - konsortial die Nachhaltigkeit sichern"
 pdf: master.pdf
 abstract: "DSpace ist eine Open-Source-Software, auf der weltweit circa 45% der Open-Access-Repositorien basieren (Quelle: opendoar.org, 15.10.2019). Im Jahr 2018 gründeten 25 akademische Institutionen in Deutschland das DSpace-Konsortium Deutschland mit dem Ziel, die Entwicklung von DSpace zu stärken und sich Einfluss auf die Entwicklung von DSpace zu sichern, die für sie strategische Bedeutung hat. Die Hintergründe zu dieser Gründung, die Ziele des Konsortiums und seiner Mitglieder sowie die Bedeutung von Open-Source-Software für nachhaltige Forschungsdateninfrastrukturen werden in diesem Artikel beleuchtet."
+pdf: "master.pdf"
 date: 2019-12-10
 comments: false
 sharing: true
