fix tag im inhaltsverzeichnis

--- a/inhalt/index.html
+++ b/inhalt/index.html
@@ -18,7 +18,7 @@ footer: true
 
 <h3>Schwerpunkt: Nachhaltigkeit von Forschungsinfrastrukturen</h3>
 
-<p>Kathrin Ganz, Marcel Wrzesinski, Markus Rauchecker &mdash; <a href="../ganz>">Nachhaltige Qualitätssicherung und Finanzierung von non-APC, scholar-led Open-Access-Journalen</a></p>
+<p>Kathrin Ganz, Marcel Wrzesinski, Markus Rauchecker &mdash; <a href="../ganz">Nachhaltige Qualitätssicherung und Finanzierung von non-APC, scholar-led Open-Access-Journalen</a></p>
 
 <p>Gabriele Fahrenkrog, Alexandra Jobmann, LIBREAS Redaktion &mdash; <a href="../fahrenkrog">Interview: Radikale Openness &mdash; wie Bibliotheken mit Open Educational Resources und Open Access die UN-Agenda 2030 unterstützen können</a></p>
 
