fix heading dspace artikel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ sharing: true
 footer: true
 ---
 
-<h1><a href="inhalt/">LIBREAS #36 | Nachhaltig von Forschungsinfrastrukturen</a></h1>
+<h1><a href="inhalt/">LIBREAS #36 | Nachhaltigkeit von Forschungsinfrastrukturen</a></h1>
 
 <p><a href="inhalt/"><img src="cover-36.jpg" alt="LIBREAS. Library Ideas #36"></a></p>
