fix toc depth using pandoc param --toc-depth=4

--- a/rajski/index.html
+++ b/rajski/index.html
@@ -20,8 +20,20 @@ footer: true
 ---
 <nav id="TOC" role="doc-toc">
 <ul>
-<li><a href="#open-source-community">Open Source Community</a></li>
-<li><a href="#das-dspace-konsortium-deutschland">Das <q>DSpace-Konsortium Deutschland</q></a></li>
+<li><a href="#open-source-community">Open Source Community</a>
+<ul>
+<li><a href="#steuerung-der-zukünftigen-entwicklung">Steuerung der zukünftigen Entwicklung</a></li>
+<li><a href="#open-source-finanzieren">Open Source finanzieren</a></li>
+</ul></li>
+<li><a href="#das-dspace-konsortium-deutschland">Das <q>DSpace-Konsortium Deutschland</q></a>
+<ul>
+<li><a href="#entstehungsgeschichte-und-beweggründe">Entstehungsgeschichte und Beweggründe</a></li>
+<li><a href="#ziele-des-konsortium">Ziele des Konsortium</a></li>
+<li><a href="#ergebnisse">Ergebnisse</a></li>
+<li><a href="#kommunikation-und-information">Kommunikation und Information</a></li>
+<li><a href="#warum-institutionen-sich-im-dspace-konsortium-engagieren-sollten">Warum Institutionen sich im DSpace-Konsortium engagieren sollten</a></li>
+<li><a href="#mitglieder-im-dspace-konsortium-deutschland-stand-oktober-2019">Mitglieder im DSpace-Konsortium Deutschland (Stand: Oktober 2019)</a></li>
+</ul></li>
 </ul>
 </nav>
 <h3 id="open-source-community">Open Source Community</h3>
@@ -108,7 +120,7 @@ footer: true
 <section class="footnotes" role="doc-endnotes">
 <hr />
 <ol>
-<li id="fn1" role="doc-endnote"><p>DSpace-Installationen in Deutschland siehe <a href="https://duraspace.org/registry/?gv\_search=&amp;filter\_10=DSpace&amp;filter\_4\_6=Germany&amp;filter\_3=&amp;filter\_20=&amp;filter\_28=&amp;mode=all" class="uri">https://duraspace.org/registry/?gv\_search=&amp;filter\_10=DSpace&amp;filter\_4\_6=Germany&amp;filter\_3=&amp;filter\_20=&amp;filter\_28=&amp;mode=all</a>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn1" role="doc-endnote"><p>DSpace-Installationen in Deutschland siehe <a href="https://duraspace.org/registry/?gv_search=&amp;filter_10=DSpace&amp;filter_4_6=Germany&amp;filter_3=&amp;filter_20=&amp;filter_28=&amp;mode=all" class="uri">https://duraspace.org/registry/?gv_search=&amp;filter_10=DSpace&amp;filter_4_6=Germany&amp;filter_3=&amp;filter_20=&amp;filter_28=&amp;mode=all</a>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn2" role="doc-endnote"><p>Herb, U. (2018). Zwangsehen und Bastarde : Wohin steuert Big Data die Wissenschaft? In: Information – Wissenschaft &amp; Praxis, 69(2-3), S. 81-88. <a href="https://doi.org/10.1515/iwp-2018-0021" class="uri">https://doi.org/10.1515/iwp-2018-0021</a>, S. 81.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn3" role="doc-endnote"><p>Siehe <a href="https://www.elsevier.com/connect/ssrn-the-leading-social-science-and-humanities-repository-and-online-community-joins-elsevier" class="uri">https://www.elsevier.com/connect/ssrn-the-leading-social-science-and-humanities-repository-and-online-community-joins-elsevier</a>.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
