--- a/inhalt/index.html
+++ b/inhalt/index.html
@@ -2,7 +2,7 @@
 
 layout: page
 lang: "de"
-title: "LIBREAS #36 (2019) | Neutralität"
+title: "LIBREAS #36 (2019) | Nachhaltigkeit von Forschungsinfrastrukturen"
 date: 2019-12-23 10:50
 comments: false
 sharing: true
