--- a/inhalt/index.html
+++ b/inhalt/index.html
@@ -24,7 +24,7 @@ footer: true
 
 <p>Niklas K. Hartmann &mdash; <a href="../hartmann">Personenbezogene Forschungsdaten in unverdächtigen Disziplinen: Das Beispiel der Erd-, Umwelt- und Agrarwissenschaften</a></p>
 
-<p>Beate Rajski, Pascal Becker &mdash; <a href="../rajski">DSpace-Konsortium Deutschland - konsortial die Nachhaltigkeit sichern</a></p>
+<p>Beate Rajski, Pascal Becker &mdash; <a href="../rajski">DSpace-Konsortium Deutschland &mdash; konsortial die Nachhaltigkeit sichern</a></p>
 
 <p>Vanessa Hannesschläger, Redaktion LIBREAS &mdash; <a href="../hannesschlaeger">Interview: Infrastrukturen, Kulturwandel und Nachhaltigkeit &mdash; eine Open Policy für das Austrian Centre for Digital Humanities der Österreichischen Akademie der Wissenschaften</a></p>
 
