--- a/inhalt/index.html
+++ b/inhalt/index.html
@@ -41,7 +41,7 @@ footer: true
 
 <h3>Veranstaltungsberichte</h3>
 
-<p>Philipp Kampa &mdash; <a href="../kampa">User-centering and constant communication. Lessons learned from the Open Repositories 2019 in Hamburg, June 10–13. A short congress report</a></p>
+<p>Philipp Kampa &mdash; <a href="../kampa">User-centering and constant communication. Lessons learnt from the Open Repositories 2019 in Hamburg, June 10–13. A short congress report</a></p>
 
 <p>Ronny Gey, Katrin Leinweber, Alexander Struck, Robert Strötgen, Christian Pietsch &mdash; <a href="../gey">Workshop @ deRSE19: Libraries for Research Software & Engineers</a></p>
 
