--- a/cover/index.html
+++ b/cover/index.html
@@ -8,7 +8,7 @@ year: "2019"
 contributor:
 - "Ben Kaden"
 title: "Zu unserem Titelbild. Die Normalität eines Kernreaktors"
-pdf: "master.pdf"
+urn: "urn:nbn:de:kobv:11-110-18452/22153-3"
 date: 2019-12-22
 comments: false
 sharing: true
