--- a/dldl/index.html
+++ b/dldl/index.html
@@ -8,8 +8,8 @@ year: "2019"
 contributor: 
 - "Redaktion LIBREAS"
 title: "Das liest die LIBREAS, Nummer #5 (Sommer/Herbst 2019)"
-pdf: "master.pdf"
-date: 2019-04-21
+urn: "urn:nbn:de:kobv:11-110-18452/22139-8"
+date: 2019-12-21
 comments: false
 sharing: true
 footer: true
