--- a/editorial/index.html
+++ b/editorial/index.html
@@ -8,7 +8,7 @@ year: "2019"
 contributor: 
 - "Redaktion LIBREAS"
 title: "Editorial LIBREAS #36: Nachhaltigkeit von Forschungsinfrastrukturen"
-pdf: master.pdf
+urn: "urn:nbn:de:kobv:11-110-18452/22154-9"
 date: 2019-12-30
 comments: false
 sharing: true
