--- a/fahrenkrog/index.html
+++ b/fahrenkrog/index.html
@@ -10,7 +10,7 @@ contributor:
 - "Alexandra Jobmann"
 - "Redaktion LIBREAS"
 title: "Radikale Openness – wie Bibliotheken mit Open Educational Resources und Open Access die UN-Agenda 2030 unterstützen können"
-pdf: "master.pdf"
+urn: "urn:nbn:de:kobv:11-110-18452/22151-1"
 date: 2019-12-08
 comments: false
 sharing: true
