--- a/gey/index.html
+++ b/gey/index.html
@@ -12,7 +12,7 @@ contributor:
 - "Robert Strötgen"
 - "Christian Pietsch"
 title: "Workshop @ deRSE19: Libraries for Research Software & Engineers"
-pdf: "master.pdf"
+urn: "urn:nbn:de:kobv:11-110-18452/22141-5	"
 date: 2019-12-09
 comments: false
 sharing: true
