--- a/krause/index.html
+++ b/krause/index.html
@@ -9,7 +9,7 @@ contributor:
 - "Carmen Krause"
 title: "Was ist Informationswissenschaft und wenn ja, wie viele?"
 subtitle: " Ein Veranstaltungsbericht"
-pdf: "master.pdf"
+urn: "urn:nbn:de:kobv:11-110-18452/22140-9"
 date: 2019-12-09
 comments: false
 sharing: true
