--- a/kampa/index.html
+++ b/kampa/index.html
@@ -8,7 +8,7 @@ year: "2019"
 contributor:
 - "Philipp Kampa"
 title: "User-centering and constant communication. Lessons learnt from the Open Repositories 2019 in Hamburg, June 10–13. A short congress report"
-pdf: master.pdf
+urn: "urn:nbn:de:kobv:11-110-18452/22142-1"
 date: 2019-12-20
 comments: false
 sharing: true
