--- a/strecker/index.html
+++ b/strecker/index.html
@@ -8,7 +8,7 @@ year: "2019"
 contributor:
 - "Dorothea Strecker"
 title: "Nutzung der Schattenbibliothek Sci-Hub in Deutschland"
-pdf: "master.pdf"
+urn: "urn:nbn:de:kobv:11-110-18452/22143-7"
 date: 2019-12-22
 comments: false
 sharing: true
